# mpfi

branches/1.5/: NEWS  README.dev  configure.ac  mpfi_config.h.in
branches/1.5/CVSROOT/: loginfo
branches/1.5/doc/: mpfi.info  mpfi.texi
branches/1.5/mpfi/: NEWS  configure.ac
branches/1.5/mpfi/doc/: mpfi.info
branches/1.5/mpfi/src/: add_z.c  cmp.c  div_q.c  fr_div.c  fr_sub.c  mul_d.c  mul_fr.c  mul_q.c  sub_fr.c  sub_z.c  ui_div.c  z_sub.c
branches/1.5/mpfi/tests/: tdiv_q.c  tis_zero.c  tmid.c  tz_sub.c
branches/1.5/src/: add_fr.c  add_q.c  cmp.c  d_div.c  div_d.c  div_si.c  div_ui.c  get_d.c  mpfi.h  mul_ui.c  q_div.c  q_sub.c  si_div.c  si_sub.c  sub_fr.c  sub_q.c  sub_si.c  z_sub.c
branches/1.5/tests/: tadd_q.c  tmul_d.c  tmul_q.c  tq_sub.c  tz_div.c  tz_sub.c
branches/travailDiep/mpfi/: AUTHORS  NEWS  README  configure.ac  mpfi_config.h.in  testFile
branches/travailDiep/mpfi/LinSys/src/: Makefile.am  mpfi_mat.c  mpfi_mat_io.c  mpfi_mat_lss.c  mpfi_mat_norm.c
branches/travailDiep/mpfi/LinSys/tests/: Makefile.am  test_mpfi_mat.c  test_mpfr_mat.c
branches/travailDiep/mpfi/doc/: mpfi.info  mpfi.texi
branches/travailDiep/mpfi/src/: mpfi-impl.h  mpfi.c  mpfi_io.h  mpfi_trigo.c
branches/travailDiep/mpfi/tests/: test_mpfi.c
src/: div_ext.c  mpfi.h
tags/1.5.0/: NEWS  README  configure.ac  depcomp  missing  mkinstalldirs  mpfi_config.h.in
tags/1.5.0/doc/: mpfi.texi
tags/1.5.0/src/: bisect.c  mpfi.h
tags/1.5.0/tests/: read_data.c
tags/1.5.2/mpfi/: mpfi_config.h.in
tags/1.5.2/mpfi/doc/: mpfi.texi
tags/1.5.2/mpfi/src/: mpfi-impl.h  mpfi.h
tags/1.5.3/mpfi/tests/: tio_str.c
tags/1.5.4/mpfi/tests/: Makefile.in
tags/Initial/mpfi/: Makefile.am  NEWS  configure  mpfi_config.h.in
tags/Initial/mpfi/doc/: mpfi.info  mpfi.texi
tags/Initial/mpfi/src/: Makefile.in  mpfi.c  mpfi.h  mpfi_io.c  mpfi_io.h  mpfi_trigo.c
tags/Initial/mpfi/tests/: Makefile.am  Makefile.in  test_mpfi.c  test_trigo.c
tests/: Makefile.am  mpfi-tests.h  read_data.c  trec_sqrt.c
trunk/mpfi/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac  mpfi_config.h  mpfi_config.h.in  testFile
trunk/mpfi/LinSys/src/: matrix_generator.c  matrix_generator.h  mpfi_mat.h  mpfr_mat.c  mpfr_mat.h
trunk/mpfi/LinSys/tests/: test_mpfi_mat.c  test_mpfr_mat.c
trunk/mpfi/doc/: Makefile.in  mpfi.info  mpfi.texi
trunk/mpfi/src/: Makefile.am  Makefile.in  abs.c  acos.c  acosh.c  add.c  add_d.c  add_fr.c  add_q.c  add_si.c  add_ui.c  add_z.c  alea.c  asin.c  asinh.c  atan.c  atan2.c  atanh.c  bisect.c  blow.c  cbrt.c  clear.c  cmp.c  cmp_sym_pi.c  constants.c  cos.c  cosh.c  cot.c  coth.c  csc.c  csch.c  d_div.c  d_sub.c  diam.c  div.c  div_2exp.c  div_2si.c  div_2ui.c  div_d.c  div_fr.c  (+108 more)
trunk/mpfi/tests/: Makefile.am  Makefile.in  check_data.c  check_line.c  init.c  mpfi-tests.c  mpfi-tests.h  random.c  read_data.c  read_line.c  tabs.c  tacos.c  tacosh.c  tadd.c  tadd_d.c  tadd_fr.c  tadd_q.c  tadd_si.c  tadd_ui.c  tadd_z.c  tasin.c  tasinh.c  tatan.c  tatan2.c  tatanh.c  tbisect.c  tblow.c  tbounded_p.c  tcbrt.c  tcmp.c  tcmp_d.c  tcmp_fr.c  tcmp_q.c  tcmp_si.c  tcmp_ui.c  tcmp_z.c  tconst_catalan.c  tconst_euler.c  tconst_log2.c  tconst_pi.c  (+147 more)
